--- a/barras.html
+++ b/barras.html
@@ -50,7 +50,7 @@
 </head>
 <body>
   <center>
-    <h1>Ejemplo de un Gráfico de Barras</h1>
+    <h1>Probando la subida en git hub</h1>
   </center>
   <br>
   <center>
